--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="mao.archive.libzip">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="mao.archive.libzip">
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 
-    <application/>
+    <application />
 
 </manifest>
