--- a/src/main/cpp/lib/gladman-fcrypt/Makefile.in
+++ b/src/main/cpp/lib/gladman-fcrypt/Makefile.in
@@ -337,11 +337,11 @@ all-am: Makefile
 installdirs:
 install: install-am
 install-exec: install-exec-am
-install-data: install-data-am
+install-child: install-child-am
 uninstall: uninstall-am
 
 install-am: all-am
-	@$(MAKE) $(AM_MAKEFLAGS) install-exec-am install-data-am
+	@$(MAKE) $(AM_MAKEFLAGS) install-exec-am install-child-am
 
 installcheck: installcheck-am
 install-strip:
@@ -385,7 +385,7 @@ info: info-am
 
 info-am:
 
-install-data-am:
+install-child-am:
 
 install-dvi: install-dvi-am
 
@@ -436,7 +436,7 @@ uninstall-am:
 .PHONY: all all-am check check-am clean clean-generic clean-libtool \
 	cscopelist-am ctags-am distclean distclean-generic \
 	distclean-libtool distdir dvi dvi-am html html-am info info-am \
-	install install-am install-data install-data-am install-dvi \
+	install install-am install-child install-child-am install-dvi \
 	install-dvi-am install-exec install-exec-am install-html \
 	install-html-am install-info install-info-am install-man \
 	install-pdf install-pdf-am install-ps install-ps-am \
