--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ android {
         externalNativeBuild {
             cmake {
                 abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86'
+                arguments '-DANDROID_ARM_MODE=arm', '-DANDROID_ARM_NEON=TRUE'
             }
         }
     }
@@ -30,8 +31,8 @@ android {
     }
 
     lintOptions {
-        disable 'TypographyFractions','TypographyQuotes'
-        enable 'RtlHardcoded','RtlCompat', 'RtlEnabled'
+        disable 'TypographyFractions', 'TypographyQuotes'
+        enable 'RtlHardcoded', 'RtlCompat', 'RtlEnabled'
         check 'NewApi', 'InlinedApi'
         abortOnError false
     }
