不依赖上层定义的版本变量

--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion build_versions.target_sdk
+    compileSdkVersion 28
 
     defaultConfig {
-        minSdkVersion build_versions.min_sdk
-        targetSdkVersion build_versions.target_sdk
+        minSdkVersion 14
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
 
@@ -45,5 +45,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.ow2.asm:asm:6.2'
 
-    implementation "androidx.annotation:annotation:${versions.annotationx}"
+    implementation "androidx.annotation:annotation:1.0.2"
 }
